# Primus

./: Daten.md  Datenmodell.canvas  Kardinalität.md  README.md  schriftliche Darstellung des ER-Modells.md
2. Server/: CMakeLists.txt  Reset Folders.bat  database.sqlite
2. Server/assets/sql/: 001_init.sql
2. Server/assets/web/: index.html
2. Server/assets/web/sql/: 001_init.sql
2. Server/database/: database.sqlite
2. Server/doxygen/documentation/html/: _adress_d_t_o_8hpp_source.html  _app_component_8hpp_source.html  _database_client_8hpp_source.html  _database_component_8hpp_source.html  _database_d_t_os_8hpp_source.html  _department_d_t_o_8hpp_source.html  _email_d_t_o_8hpp_source.html  _member_controller_8hpp_source.html  _member_d_t_o_8hpp_source.html  _member_service_8hpp_source.html  _membership_d_t_o_8hpp_source.html  _page_d_t_o_8hpp_source.html  _phone_number_d_t_o_8hpp_source.html  _static_controller_8hpp_source.html  _status_d_t_o_8hpp_source.html  _swagger_component_8hpp_source.html  _training_d_t_o_8hpp_source.html  annotated.html  annotated_dup.js  class_address_d_t_o-members.html  class_address_d_t_o.html  class_app_component-members.html  class_app_component.html  class_app_component.js  class_database_client-members.html  class_database_client.html  class_database_client.js  class_database_component-members.html  class_database_component.html  class_database_component.js  class_department_d_t_o-members.html  class_department_d_t_o.html  class_department_training_rel_d_t_o-members.html  class_department_training_rel_d_t_o.html  class_email_d_t_o-members.html  class_email_d_t_o.html  class_member_adress_rel_d_t_o-members.html  class_member_adress_rel_d_t_o.html  class_member_controller-members.html  class_member_controller.html  (+58 more)
2. Server/doxygen/documentation/latex/: _adress_d_t_o_8hpp_source.tex  _app_component_8hpp_source.tex  _database_client_8hpp_source.tex  _database_component_8hpp_source.tex  _database_d_t_os_8hpp_source.tex  _department_d_t_o_8hpp_source.tex  _email_d_t_o_8hpp_source.tex  _member_controller_8hpp_source.tex  _member_d_t_o_8hpp_source.tex  _member_service_8hpp_source.tex  _membership_d_t_o_8hpp_source.tex  _page_d_t_o_8hpp_source.tex  _phone_number_d_t_o_8hpp_source.tex  _static_controller_8hpp_source.tex  _status_d_t_o_8hpp_source.tex  _swagger_component_8hpp_source.tex  _training_d_t_o_8hpp_source.tex  annotated.tex  class_address_d_t_o.eps  class_address_d_t_o.tex  class_app_component.tex  class_database_client.eps  class_database_client.tex  class_database_component.tex  class_department_d_t_o.eps  class_department_d_t_o.tex  class_department_training_rel_d_t_o.eps  class_department_training_rel_d_t_o.tex  class_email_d_t_o.eps  class_email_d_t_o.tex  class_member_adress_rel_d_t_o.eps  class_member_adress_rel_d_t_o.tex  class_member_controller.eps  class_member_controller.tex  class_member_d_t_o.eps  class_member_d_t_o.tex  class_member_email_rel_d_t_o.eps  class_member_email_rel_d_t_o.tex  class_member_membership_rel_d_t_o.eps  class_member_membership_rel_d_t_o.tex  (+25 more)
2. Server/sql/: 001_init.sql
2. Server/src/: App.cpp  AppComponent.hpp  filesystemHelper.hpp
2. Server/src/controller/: AddressController.hpp  Controllers.cpp  Controllers.hpp  DepartmentController.hpp  EmailController.hpp  MemberController.hpp  MembershipController.hpp  PhoneNumberController.hpp  StaticController.hpp  TrainingController.hpp
2. Server/src/controller/relations/: DepartmentTrainingRelController.hpp  MemberAddressRelController.hpp  MemberAdressRelController.hpp  MemberEmailRelController.hpp  MemberMembershipRelController.hpp  MemberPhoneRelController.hpp  MemberTrainingRelController.hpp  MembershipDepartmentRelController.hpp
2. Server/src/database/: DatabaseClient.hpp  DatabaseComponent.hpp
2. Server/src/dto/: BooleanDto.hpp  CountDto.hpp  DTOs.hpp  DatabaseDtos.hpp  MemberCountDTO.hpp  MembershipFeeDto.hpp  PageDTO.hpp  PageDto.hpp  StatusDTO.hpp  StatusDto.hpp
2. Server/src/dto/database/: AddressDTO.hpp  AddressDto.hpp  DatabaseDTOs.hpp  DepartmentDTO.hpp  DepartmentDto.hpp  EmailDTO.hpp  MemberDTO.hpp  MemberDto.hpp  MembershipDTO.hpp  PhoneNumberDTO.hpp  TrainingDTO.hpp
2. Server/src/dto/databaseDTOs/: AdressDTO.hpp  DatabaseDTOs.hpp  DepartmentDTO.hpp  EmailDTO.hpp  MemberDTO.hpp  MembershipDTO.hpp  PhoneNumberDTO.hpp  TrainingDTO.hpp
2. Server/src/general/: constants.hpp
2. Server/src/service/: AddressService.cpp  AddressService.hpp  AdressService.cpp  AdressService.hpp  DepartmentService.cpp  DepartmentService.hpp  EmailService.cpp  EmailService.hpp  MemberService.cpp  MemberService.hpp  MembershipService.cpp  MembershipService.hpp  PhoneNumberService.cpp  PhoneNumberService.hpp  TrainingService.cpp  TrainingService.hpp
2. Server/src/service/relations/: DepartmentTrainingRelService.cpp  DepartmentTrainingRelService.hpp  MemberAddressRelService.cpp  MemberAddressRelService.hpp  MemberEmailRelService.cpp  MemberEmailRelService.hpp  MemberMembershipRelService.cpp  MemberMembershipRelService.hpp  MemberPhoneRelService.cpp  MemberPhoneRelService.hpp  (+6 more)
2. Server/src/sqlite/: DatabaseClient.hpp  DatabaseComponent.hpp
2. Server/src/swagger-ui/: SwaggerComponent.hpp
2. Server/test/: StaticControllerTest.cpp  StaticControllerTest.hpp  tests.cpp
2. Server/test/app/: TestComponent.hpp
2. Server/web/: index.html
2. Server/web/javascript/: bla.js
PrimusSvr/: CMakeLists.txt
PrimusSvr/assets/sql/: 001_init.sql
PrimusSvr/assets/web/: index.html  overview.html  profile_create.html  profile_display.html  profile_edit.html  profile_view.html
PrimusSvr/src/: App.cpp  AppComponent.hpp  filesystemHelper.hpp
PrimusSvr/src/controller/: MemberController.hpp  StaticController.hpp
PrimusSvr/src/database/: DatabaseClient.hpp  DatabaseComponent.hpp
PrimusSvr/src/dto/: BooleanDto.hpp  CountDto.hpp  DatabaseDtos.hpp  Int32Dto.hpp  PageDto.hpp  StatusDto.hpp
PrimusSvr/src/general/: asserts.hpp  constants.hpp  exceptions.hpp
PrimusSvr/src/managers/: MemberMamanger.cpp  MemberManager.hpp
PrimusSvr/src/swagger-ui/: SwaggerComponent.hpp
(+506 files in other folders)
